<resources>
    <string name="app_name">SkillIncreaseApp</string>

    <!--intro screen values-->
    <string name="next">Следующий</string>
    <string name="skip">Пропустить</string>
    <string name="go_it">Далее</string>
    <string name="slide_one_titile">Добро пожаловать!</string>
    <string name="slide_one_desc">Это приложение для мониторинга документооборота кафедры.</string>
    <string name="slide_two_titile">Вход</string>
    <string name="slide_two_desc">Войдите под своей учетной записью.</string>
    <string name="slide_three_titile">Возможности</string>
    <string name="slide_three_desc">Открытый доступ к документам кафедры АПЕПС КПИ. Скачивайте, редактируейте и сохраняйте изменения!</string>
    <string name="slide_four_titile">Спасибо за внимание</string>
    <string name="slide_four_desc">Приятного использования!</string>


    <!--login screen-->
    <string name="login">Введите ваше имя</string>
    <string name="password">Введите ваш пароль</string>
    <string name="autorize">Авторизироваться</string>
    <string name="remember_me">Запомнить меня</string>

    <string name="id" formatted="false">ID = %s</string>
    <string name="name" formatted="false">NAME = %s</string>
    <string name="age" formatted="false">AGE = %s</string>
    <string name="gender" formatted="false">GENDER = %s</string>

    <string name="kpi">KPI</string>
    <string name="apeps">APEPS</string>

    <!--main screen-->
    <string name="documents">Документы</string>
    <string name="document_type" formatted="false">ИД документа: %s</string>
    <string name="author" formatted="false">Автор: %s</string>
    <string name="creator" formatted="false">Создатель: %s</string>
    <string name="executor" formatted="false">Исполнитель: %s</string>
    <string name="open_document">Открыть документ</string>
    <string name="document_name" formatted="false">Имя документа: %s</string>
    <string name="name_of_document" formatted="false">Имя документа:</string>
    <string name="done">Выполнено</string>
    <string name="downloading">Загрузка…</string>
    <string name="no_internet_connection">Проверьте интернет подключение</string>
    <string name="something_go_wrong">Что-то пошло не так</string>
    <string name="document_just_signed">Документ подписан!</string>
    <string name="documents_asigned">Выполненные назначения</string>
    <string name="documents_that_you_asign">Ваши назначения</string>
    <string name="settings_menu">Настройки</string>
    <string name="exit">Выйти</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="documents_on_assign">Документы на подпись</string>
    <string name="documents_id">ID документа: </string>
    <string name="documents_assigned_data">Дата подписания: </string>
    <string name="input_assignment">Входящие поручения</string>
    <string name="output_assignment">Исходящие поручения</string>
    <string name="create_assignment">Создать документ</string>
    <string name="create_document">Создать поручение</string>
    <string name="input_short_information">Краткaя информация</string>
    <string name="choose_exectuor">Выбрать исполнителя: </string>
    <string name="tap_to_choose_exectuor">Нажмите для выбора исполнителя: </string>
    <string name="input_time_for_execution">Укажите время до исполнения: </string>
    <string name="choose_file">Выберите файл: </string>
    <string name="choose_file_add">Нажмите для выбора файла</string>
    <string name="choose_document_type">Выберите тип документа:</string>
    <string name="exit_dialog_message">Вы действительно хотите выйти?</string>
    <string name="exit_dialog_title">Выйти из аккаунта?</string>
    <string name="take_in_progress">Взять в процесс</string>
    <string name="assign_execution">Назначить выполнение</string>

    <string name="document">Документ</string>
    <string name="assignment">Поручение</string>

    <string name="do_photo_with">Выбрать фото с помощью:</string>
    <string name="camera">Камеры</string>
    <string name="gallery">Галереии</string>


    <string name="fill_in_all_fields">Заполните все поля</string>

</resources>
